--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -17,4 +17,34 @@
       }
     }
   }
+  .test_box{
+    width: 500px;
+    border: 1px solid #333;
+    .test_nav{
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+      margin: 0;
+      li{
+        width: 150px;
+        height: 50px;
+        text-align: center;
+        line-height: 50px;
+        cursor: pointer;
+      }
+      .active{
+        background-color: skyblue;
+        position: relative;
+        &::after{
+          content:"";
+          display: inline-block;
+          position: absolute;
+          width: 60%;
+          bottom: 0;
+          left: 20%;
+          border-bottom: 2px solid red;
+        }
+      }
+    }
+  }
 }
