--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -3,7 +3,7 @@
   .home-top {
     background-position: bottom, center;
     background-repeat: no-repeat, no-repeat;
-    background-size: cover;
+    background-size: 100% 1173px;
     height: 1173px;
     .right-btn {
       position: fixed;
