--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -178,4 +178,48 @@
       z-index: 2;
     }
   }
+  .news-content {
+    background-image: url('../../assets/img/icon/icon-23.png');
+    background-repeat: no-repeat, no-repeat;
+    background-size: 100% 1550px;
+    height: 1550px;
+    .more-btn {
+      width: 194px;
+      height: 52px;
+      line-height: 52px;
+      text-align: center;
+      background-image: url('../../assets/img/icon/icon-24.png');
+      background-repeat: no-repeat, no-repeat;
+      background-size: 100% 100%;
+    }
+    .news-title {
+      span {
+        letter-spacing: 2px;
+        background-image: linear-gradient(-133deg, #00B3E0, #0264F8);
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+      }
+    }
+    .news-list {
+      .news-list-item {
+        
+        background-repeat: no-repeat, no-repeat;
+        background-size: 100% 100%;
+        .item-box {
+          .item-time {
+            span {
+              font-size: 14px;
+              font-weight: 600;
+              letter-spacing: 2px;
+              background-image: linear-gradient(-133deg, #00B3E0, #0264F8);
+              color: transparent;
+              background-clip: text;
+              -webkit-background-clip: text;
+            }
+          }
+        }
+      }
+    }
+  }
 }
