--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -359,3 +359,14 @@ video {
 [hidden] {
   display: none;
 }
+
+.mark-cur:hover::after {
+  cursor: pointer;
+  content: '';
+  position: absolute;
+  top: 3px;
+  right: 4px;
+  width: 15px; 
+  height: 15px;
+  background: url('../assets/img/buy-now-sign.png') no-repeat center;
+}
